fixed dark mode

--- a/shell/_theme.css
+++ b/shell/_theme.css
@@ -1,5 +1,6 @@
  :root {
-	 --windows-ten-os-color: #4c4a48;
+	 /*--windows-ten-os-color: #4c4a48;*/
+	 --windows-ten-os-color: #000000;
      /*--custom-accent-color: #57c945;*/
 	 --custom-accent-color: #e67e22;
  }
